added mentee and agile coach files

--- a/CSS/agile-coach.css
+++ b/CSS/agile-coach.css
@@ -22,7 +22,7 @@
 .sidebar{
     background-color: #CAF0F8;
     width: 25%;
-    height: 2500px;
+    height: 315vh;
 }
 hr{
     background: #00B4D8;
