--- a/CSS/AboutUs.css
+++ b/CSS/AboutUs.css
@@ -5,31 +5,121 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-nav{
-  display: flex;
-  justify-content: space-between;
-  background-color: #EFECEF;
-  padding-left: 1rem;
-  padding-right: 4rem;
-  align-items: center;
-  padding-block: 1rem;
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #efecef;
+	padding-right: 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 20;
 }
 
-ul{
-  display: flex;
-  gap: 1.5rem;
-  list-style: none;
-  align-items: center;
+.navlist {
+	display: flex;
+	justify-content: space-between;
+	gap: 3.5rem;
+	list-style-type: none;
 }
-li a{
-  text-decoration: none;
-  color: black;
-  font-family: open sans;
-  font-size: 26px;
-  font-weight: 400;
-  line-height: 36px;
+
+nav ul li a {
+	text-decoration: none;
+	display: block;
+	color: black;
+	font-family: lato;
+	font-size: 20px;
 }
+
+nav ul li a:hover {
+	color: #0077b6;
+}
+
+nav ul li {
+	position: relative;
+}
+
+nav ul li ul {
+	position: absolute;
+	left: 0;
+	width: 100px;
+	list-style: none;
+	background-color: white;
+	height: 50px;
+	display: none;
+}
+
+nav ul li ul li {
+	width: 100%;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+nav ul li ul li a {
+	font-size: 15px;
+}
+nav ul li ul li a:hover {
+	background: #0077b6;
+	color: white;
+}
+
+#service:hover > #list {
+	display: initial;
+}
+/* navbar buttons */
+.btn-div {
+	display: flex;
+	gap: 1rem;
+}
+.btn-div button {
+	letter-spacing: 1px;
+	transition: 0.3s ease all;
+	border-radius: 8px;
+	font-family: lato;
+}
+#btn1 {
+	border: 3px solid #0077b6;
+	padding: 20px 40px;
+	font-size: 14px;
+}
+#btn2 {
+	border: none;
+	padding-inline: 40px;
+	background: #0077b6;
+	color: white;
+	font-size: lato;
+	font-size: 12px;
+}
+
+.dropdowns {
+	opacity: 0;
+    display: flex;
+	flex-direction: column;
+	gap: 1rem;
+    position: absolute;
+    top: 80%;
+    right: 0;
+}
+.dropdown {
+	opacity: 0;
+    display: flex;
+	flex-direction: column;
+	gap: 1rem;
+    position: absolute;
+    top: 80%;
+    right: 12%;
+}
+
+.dropdown-button {
+	/* display: none; */
+    background-color: #0077b6;
+    color: #fff;
+    border: none;
+	margin-left: 1rem;
+    padding: 10px;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   ul {
       display: none;
@@ -171,44 +261,113 @@ padding-top: 1.5rem;
   height: 1900px;
 }
   
-/* footer styles */
+/* footer */
+/* footer */
+
 footer{
   background-color: #0077B6;
 }
-footer a{
+a{
   text-decoration: none;
 }
 .footer-wrapper{
   width: 95%;
   margin-inline: auto !important;
+padding-top: 48px;
+padding-bottom: 48px;
+display: flex;
+column-gap: 48px;
+
 }
 .footer-logo{
-  width: 200px;
-  height: 300px;
-  background: url(../Images/footer-logo-bg.png) center/ cover no-repeat;
-  position: relative;
+  width: 300px;
+  height: 280px;
+margin-top: 100px;
+ 
 }
 .footer-logo img{
-  width: 70%;
-  position: absolute;
-  top:35% ;
-  left:15%;
+  width: 100%;
+height: 100%;
+
+
   /* transform: translate(-35%, 15%); */
 }
 .footer-content-wrapper{
   width: 70%;
 }
-footer form input{
+footer .footer-content-wrapper form{
   position: relative;
 }
-footer button{
+footer .footer-content-wrapper form input{
+padding-right: 12px;
+padding-left: 19.2px;
+padding-right: 19.2px;
+padding-bottom: 19.2px;
+border-radius: 100px;
+width: 100%;
+background-color: transparent;
+border-radius: 30px;
+border: 3px solid #EFECEF;
+color: #EFECEF;
+}
+footer .footer-content-wrapper form button{
+padding-right: 50px;
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 50px;
+background-color: white;
+border-radius: 100px;
   position: absolute;
-  top: 8%;
-  left:68%;
+  top: 0%;
+  left: 55%;
+height: 100%;
+width: 45%;
+
+  
+}
+footer .footer-content-wrapper form button a{
+padding-inline: 36px;
+padding-top: 48px;
+padding-bottom: 48px;
+color:#0077B6;
+text-align: center;
+font-family: Lato;
+font-size: 22px;
+font-weight: 400;
+line-height: 28px;
+
+}
+.footer-links{
+color: white;
+display: flex;
+justify-content: space-between;
+margin-top: 48px;
+
+}
+.footer-links .platfrom-links{
+color:  #EFECEF;
+font-size: 16px;
+font-weight: 500;
+line-height: 20px; /* 125% */
+letter-spacing: 0.5px;
+font-family: 'Lato', sans-serif;
+}
+.footer-links .platfrom-links h3{
+text-transform: uppercase;
+margin-bottom: 19.2px;
+font-family: 'Lato', sans-serif;
+font-size: 22px;
+font-weight: 400;
+line-height: 28px;
 }
 .footer-links li{
+margin-top: 48px;
+margin-bottom: 48px;
+color: white;
+display: flex;
+justify-content: space-between;
   list-style: none;
-  margin-bottom: 1rem !important;
+  margin-bottom: 16px;
 }
 .footer-links a{
   color: white;
@@ -216,4 +375,38 @@ footer button{
 footer hr{
   color: white;
   border: 2px solid white;
+}
+.copyright{
+display: flex;
+justify-content: space-between;
+width: 100%;
+align-items: center;
+margin-top: 48px;
+}
+
+.copyright p{
+color: white;
+display: flex;
+align-items: center;
+gap: 28.8px;
+}
+.copyright p span{
+font-size: 24px;
+color: white;
+}
+.copyright form select {
+padding-top: 19.5px;
+padding-bottom: 19.5px;
+padding-left: 38.4px;
+color: white;
+background-color: transparent;
+border: none;
+}
+
+.copyright form select option{
+background-color: transparent;
+}
+.online-links-wrappers{
+display: flex;
+gap: 28.8px;
 }
