--- a/CSS/mentor_signup3.css
+++ b/CSS/mentor_signup3.css
@@ -5,6 +5,47 @@
 	box-sizing: border-box;
 	font-family: "Lato", sans-serif;
 }
+.navbar{
+    font-family: 'Open Sans', sans-serif;
+    background-color: #EFECEF;
+}
+.navbar-brand img{
+    width: 75% !important;
+    height: 5rem !important;
+}
+.navbar .nav-link , .nav .dropdown-item{
+    color: #0F0E0E !important;
+    font-size: 1.25rem;
+    margin-right: 1rem !important;
+}
+
+.btn{
+    transition:.3s ease all;
+    padding: 0.75rem 2.4rem;
+    text-transform: capitalize;
+    font-size: 1.15rem;
+    letter-spacing: 1px;
+}
+.btn-1{
+    border: 2px solid #0077B6 !important;
+    color: #0F0E0E;
+}
+.btn-1:hover{
+    background-color: #0077B6 !important;
+    color: #FFF;
+}
+.btn-2{
+    background-color: #0077B6;
+    color: #FFF;
+}
+.btn-2:hover{
+    background-color: transparent;
+    color: #0F0E0E;
+    border: 2px solid #0077B6 !important;
+}
+.signup-section{
+	margin-top: 5rem !important;
+}
 a {
 	text-decoration: none;
 }
@@ -62,10 +103,10 @@ a {
 	padding-block: 0.5rem !important;
 	padding-inline: 0.75rem !important;
 }
-.btn-div #btn-1{
+.div-btn #btn-1{
 	width: 40% !important;
 }
-.btn-div button {
+.div-btn button {
 	border: 1px solid #0077b6 !important;
 	/* padding-block: 0.5rem !important;
 	padding-inline: 0.75rem !important; */
