--- a/CSS/Mentee's_m_search-result.css
+++ b/CSS/Mentee's_m_search-result.css
@@ -33,11 +33,16 @@ a{
 .settings-icon{
     width: 15%;
 }
+.home-content{
+    width: 90%;
+    margin-inline: auto !important;
+}
 .home-content span , hr{
     color: #00B4D8;
 }
 hr{
-    border: 1px solid #00B4D8;
+    color: #00B4D8;
+    border: 2px solid #00B4D8;
 }
 h5{
     color: #00B4D8;
@@ -60,8 +65,10 @@ h5{
     color: #00B4D8;
 }
 .card-1{
-    height: 50% !important;
+    width: 45%;
+    height: 55% !important;
 }
 .card-2{
+    width: 35%;
     margin-top: 15rem !important;
 }
