--- a/CSS/agile-coach.css
+++ b/CSS/agile-coach.css
@@ -113,3 +113,11 @@ h5{
     display: inline;
     font-size: 1.75rem !important;
 }
+.card3{
+    opacity: 0;
+    width: 60% !important;
+    top: -60%;
+    left: 50%;
+    z-index: 1;
+    background-color: #00B4D8;
+}
