--- a/CSS/mentee-dashboard-1.css
+++ b/CSS/mentee-dashboard-1.css
@@ -88,3 +88,12 @@ h5 , .num-p{
         opacity: 1;
     }
 }
+
+.card3{
+    opacity: 0;
+    width: 70% !important;
+    top: -60%;
+    left: 65%;
+    z-index: 1;
+    background-color: #00B4D8;
+}
