added page connections

--- a/CSS/AboutUs.css
+++ b/CSS/AboutUs.css
@@ -316,6 +316,7 @@ padding-top: 10px;
 padding-bottom: 10px;
 padding-left: 50px;
 background-color: white;
+border: none;
 border-radius: 100px;
   position: absolute;
   top: 0%;
