--- a/CSS/AboutUs.css
+++ b/CSS/AboutUs.css
@@ -128,11 +128,13 @@ nav ul li ul li a:hover {
 
 /* Hero section */
 .sec1{
-  background-image: url(../Images/Rectangle\ 147.png);
+  background-image: linear-gradient(rgba(31, 25, 25, 0.5), rgba(0, 0, 0, 0.7)) , url(../Images/Rectangle\ 147.png);
   background-repeat: no-repeat;
   background-size: cover;
   height: 542px;
+  margin-top: 7rem;
 }
+
 .hero, .section2, .section4{
   display: flex;
   flex-direction: column;
@@ -143,6 +145,9 @@ nav ul li ul li a:hover {
   font-weight: 400;
   color: #CAF0F8;
   text-align: center;
+}
+.hero p{
+  color: #D9D9D9;
 }
 .hero h2{
   font-size: 57px ;
