--- a/CSS/index.css
+++ b/CSS/index.css
@@ -336,6 +336,18 @@ form button {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
+}
+
+.dropdown3 {
+	opacity: 0;
+    display: flex;
+	flex-direction: column;
+	gap: 1rem;
+    position: absolute;
+    bottom: -32%;
+    right: 0%;
+	z-index: 10;
 }
 .section2-imgdiv-des p {
 	font-family: Lato;
@@ -441,6 +453,8 @@ form button {
 	);
 	box-shadow: 0px 5.36789px 26.83946px 0px rgba(0, 0, 0, 0.12);
 }
+
+
 
 /* section 4 */
 .section4 {
