--- a/CSS/Mentee's booking response.css
+++ b/CSS/Mentee's booking response.css
@@ -16,7 +16,12 @@
 .navbar .nav-link{
     color: #0F0E0E !important;
 }
-
+.dropdown-menu{
+    background-color: #00B4D8;
+}
+.dropdown-menu a:hover{
+    background: transparent;
+}
 .sidebar{
     background-color: #CAF0F8;
     width: 20%;
@@ -40,7 +45,7 @@ a{
     color: #00B4D8;
 }
 hr{
-    border: 1px solid #00B4D8;
+    border: 2px solid #00B4D8;
 }
 .card{
     background: linear-gradient(0deg, #FFF 0%, #FFF 100%), var(--Highlight, #E7E7E7);
