--- a/CSS/Mentee's_m_search-result.css
+++ b/CSS/Mentee's_m_search-result.css
@@ -57,6 +57,12 @@ h5{
     background-color: #0077B6;
     color: #FFF;
 }
+.dropdown-menu{
+    background-color: #00B4D8;
+}
+.dropdown-menu a:hover{
+    background: transparent;
+}
 .card{
     background: linear-gradient(0deg, #FFF 0%, #FFF 100%), var(--Highlight, #E7E7E7);
     box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.20);
