--- a/CSS/agile-coach.css
+++ b/CSS/agile-coach.css
@@ -17,7 +17,12 @@
 .navbar .nav-link{
     color: #0F0E0E !important;
 }
-
+.dropdown-menu{
+    background-color: #00B4D8;
+}
+.dropdown-menu a:hover{
+    background: transparent;
+}
 
 .sidebar{
     background-color: #CAF0F8;
