--- a/CSS/book-mentor.css
+++ b/CSS/book-mentor.css
@@ -1,54 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 * {
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+	margin: 0 !important;
+	padding: 0 !important;
+	box-sizing: border-box;
+	font-family: "Lato", sans-serif;
 }
-.navbar , .btn-1{
-    background-color: #EFECEF;
+.navbar,
+.btn-1 {
+	background-color: #efecef;
 }
-.navbar-brand img{
-    width: 75% !important;
-    height: 6rem !important;
+.navbar-brand img {
+	width: 75% !important;
+	height: 6rem !important;
 }
-.navbar .nav-link{
-    color: #0F0E0E !important;
+.navbar .nav-link {
+	color: #0f0e0e !important;
 }
-
-.sidebar{
-    background-color: #CAF0F8;
-    width: 20%;
-    height: 110vh !important;
+.dropdown-menu {
+	background-color: #00b4d8;
 }
-
-a{
-    text-decoration: none;
+.dropdown-menu a:hover {
+	background: transparent;
 }
-
-.icon-links a{
-    color: #0F0E0E;
-}
-.settings-icon{
-    width: 15%;
+.sidebar {
+	background-color: #caf0f8;
+	width: 20%;
+	height: 110vh !important;
 }
 
-hr{
-    color: #00B4D8;
-    border: 2px solid #00B4D8;
+a {
+	text-decoration: none;
+}
+
+.icon-links a {
+	color: #0f0e0e;
+}
+.settings-icon {
+	width: 15%;
+}
+
+hr {
+	color: #00b4d8;
+	border: 2px solid #00b4d8;
 }
 /* .btn-hr{
     border: 1px solid #FFF;
 } */
-.first-a{
-    color: #00B4D8;
+.first-a {
+	color: #00b4d8;
 }
-.btn-2 , .btn-2:hover{
-    background-color: #00B4D8;
-}
-
-.button-clicked , .button-clicked:hover{
-    background-color: #00B4D8; /* Change to the desired color */
+.btn-2,
+.btn-2:hover {
+	background-color: #00b4d8;
 }
 
+.button-clicked,
+.button-clicked:hover {
+	background-color: #00b4d8; /* Change to the desired color */
+}
+
+.card{
+    width: 85% ;
+}
+.card .row button {
+	display: flex;
+	width: 136px ;
+	height: 40px;
+	padding: 30px 8px !important;
+	align-items: center;
+	flex-shrink: 0;
+}
